--- a/wiki/ToDoLists.wiki
+++ b/wiki/ToDoLists.wiki
@@ -7,11 +7,11 @@ Although the script IS functional already, there are still many things I'm not s
 
 == To-Do List for next revision (not a release) ==
 
-  * Completely redo the admin panel's layout, and get rid of the ugly tables, replacing them with divs and other elements.  This also includes design: a new look, with new colors, better use of CSS, some graphics and icons, etc.
-  * Add pagination to the category and link lists at the admin panel.
-  * Add filtering/sorting/search functionality to the category and link lists at the admin panel, allowing the user to browse the links by specific criteria, such as a certain category.
-  * Attempt to implement RSS/atom feeds for the links.
-  * Attempt to create a feature that allows to export the links in CSV (comma separated value) format, XML and/or similar.  (If I manage to do this, I'd also like to include an IMPORT feature as well, in order to include bookmarks from some browsers and online bookmarking services.
-  * Add more flexibility to user functions get_category() and get_link().
-  * Rewrite user functions links_count() and categories_count().
-  * More to come.
+  * Completely *redo* the admin panel's *layout*, and get rid of the ugly tables, replacing them with divs and other elements.  This also includes *design*: a *new look*, with new colors, better use of CSS, some graphics and icons, etc.
+  * Add *pagination* to the category and link lists at the admin panel.
+  * Add *filtering/sorting/search functionality* to the category and link lists at the admin panel, allowing the user to *browse the links (and categories) by specific criteria*, such as a certain category.
+  * Attempt to implement *RSS/atom feeds* for the links.
+  * Attempt to create a feature that allows to *EXPORT* the links in *CSV* (comma separated value) format, *XML* and/or similar.  (If I manage to do this, I'd also like to include an *IMPORT* feature as well, in order to include bookmarks from some browsers and online bookmarking services.)
+  * Add *more flexibility* to user functions *get_category()* and *get_link()*.
+  * *Rewrite* user functions *links_count()* and *categories_count()*.
+  * *More* to come.
