--- a/wiki/ToDoLists.wiki
+++ b/wiki/ToDoLists.wiki
@@ -14,5 +14,6 @@ Although the script IS functional already, there are still many things I'm not s
   * Attempt to create a feature that allows to *EXPORT* the links in *CSV* (comma separated value) format, *XML* and/or similar.  (If I manage to do this, I'd also like to include an *IMPORT* feature as well, in order to include bookmarks from some browsers and online bookmarking services.)
   * *CURRENT TASK*: Add *more flexibility* to user functions *get_category()* and *get_link()*.
   * Fix some queries.
+  * Might add some more security and input checking to login form and certain user functions.
   * ~~*Rewrite* user functions *links_count()* and *categories_count()*.~~
   * *More* to come.
